# Toolscreen-zh_CN

./: .gitignore  CMakeLists.txt  LICENSE  config_defaults.h  config_toml.cpp  config_toml.h  default.toml  dllmain.cpp  expression_parser.cpp  expression_parser.h  fake_cursor.cpp  fake_cursor.h  gui.cpp  gui.h  imgui_cache.cpp  imgui_cache.h  input_hook.cpp  input_hook.h  logic_thread.cpp  logic_thread.h  mirror_thread.cpp  mirror_thread.h  obs_thread.cpp  obs_thread.h  profiler.cpp  profiler.h  render.cpp  render.h  render_thread.cpp  render_thread.h  resource.h  shared_contexts.cpp  shared_contexts.h  utils.cpp  utils.h  version.cpp  version.h  virtual_camera.cpp  virtual_camera.h  window_overlay.cpp  (+1 more)
src/: config_defaults.h  config_toml.cpp  config_toml.h  default.toml  dllmain.cpp  fake_cursor.cpp  gui.cpp  gui.h  input_hook.cpp  input_hook.h  logic_thread.cpp  logic_thread.h  mirror_thread.cpp  render.cpp  render_thread.cpp  shared_contexts.cpp  utils.cpp  utils.h  version.h
src/gui/: tab_basic_general.inl  tab_basic_other.inl  tab_hotkeys.inl  tab_mirrors.inl  tab_modes.inl  tab_settings.inl
